# data-utils

./: pyproject.toml
data_utils/: __init__.py  build.py  cli.py  fragment.py  identifiers.py  parser.py  serialization.py
tests/: test_identifiers.py  test_matrika_fixtures.py  test_parser.py
tests/fixtures/: complex_page.md  duplication.md  no_header.md  sample.md  sample.mermaid  sample.yaml  simple_page.md  wikilink.md
ts/: fragments.ts
